# pldi26-ereq

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  REVIEW.md  flake.nix  run-ltlf.sh
data/: result-sat.txt  result-unsat.txt
plots/: .gitignore  gen-cactus.mjs  package-lock.json  package.json
plots/prerecorded/: all_automatark_ereq.json  all_automatark_mona.json
src/ereq/: Cargo.toml
src/ereq-algebra/: Cargo.toml
src/ereq-algebra/src/: bdd.rs  lib.rs  solver.rs
src/ereq/examples/: benchmarks-random.rs  benchmarks.rs  benchmarks_gaston.rs  config_experiment.rs  distance.rs  forall_empty_string.rs
src/ereq/src/: lexer.rs  lib.rs  main.rs  parser.rs
